syntax = "proto3";

package proto_common.user;

option java_multiple_files = true;
option java_package = "com.nm.order.management.proto_common.user";
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;

import "google/protobuf/timestamp.proto";

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  google.protobuf.Timestamp dateOfBirth = 6;
  string role = 7;
}

message CreateUserResponse {
  string username = 1;
  string email = 2;
  string fullName = 3;
  google.protobuf.Timestamp dateOfBirth = 4;
  string role = 5;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}